// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JourneyTimeline matches snapshot (dark mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-1vamrj8"
    data-testid="journey-timeline"
  >
    <div
      style="position: relative;"
    >
      <div
        class="MuiBox-root css-61pg67"
      >
        <div
          style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
        >
          <div
            class="MuiBox-root css-5mn1cg"
          />
        </div>
        <div
          aria-label="First Introduction to Computers - 2011"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2011
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              First Introduction to Computers
            </p>
          </div>
        </div>
        <div
          aria-label="Built My First Website - 2015"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2015
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              Built My First Website
            </p>
          </div>
        </div>
        <div
          aria-label="Started Learning to Code - 2016"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2016
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              Started Learning to Code
            </p>
          </div>
        </div>
        <div
          aria-label="First Freelance Project - 2020"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2020
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              First Freelance Project
            </p>
          </div>
        </div>
        <div
          aria-label="First Internship - 2021"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2021
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              First Internship
            </p>
          </div>
        </div>
        <div
          aria-label="Started Freelancing - 2022"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2022
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              Started Freelancing
            </p>
          </div>
        </div>
        <div
          aria-label="Landed My First Job - 2023"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-1qbfobq"
            />
          </div>
          <div>
            <span
              class="css-u4jj8o"
            >
              2023
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-1l4z83q-MuiTypography-root"
            >
              Landed My First Job
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`JourneyTimeline matches snapshot (light mode) 1`] = `
<div>
  <div
    class="MuiBox-root css-1vamrj8"
    data-testid="journey-timeline"
  >
    <div
      style="position: relative;"
    >
      <div
        class="MuiBox-root css-61pg67"
      >
        <div
          style="position: absolute; top: 20px; left: 10%; right: 10%; height: 2px; transform-origin: left center;"
        >
          <div
            class="MuiBox-root css-1wnmfj9"
          />
        </div>
        <div
          aria-label="First Introduction to Computers - 2011"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2011
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              First Introduction to Computers
            </p>
          </div>
        </div>
        <div
          aria-label="Built My First Website - 2015"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2015
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              Built My First Website
            </p>
          </div>
        </div>
        <div
          aria-label="Started Learning to Code - 2016"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2016
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              Started Learning to Code
            </p>
          </div>
        </div>
        <div
          aria-label="First Freelance Project - 2020"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2020
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              First Freelance Project
            </p>
          </div>
        </div>
        <div
          aria-label="First Internship - 2021"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2021
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              First Internship
            </p>
          </div>
        </div>
        <div
          aria-label="Started Freelancing - 2022"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2022
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              Started Freelancing
            </p>
          </div>
        </div>
        <div
          aria-label="Landed My First Job - 2023"
          class="MuiBox-root css-1ev1ol4"
          role="button"
          tabindex="0"
        >
          <div>
            <div
              class="MuiBox-root css-wdxwfc"
            />
          </div>
          <div>
            <span
              class="css-1rb3lmj"
            >
              2023
            </span>
            <p
              class="MuiTypography-root MuiTypography-body1 css-14kffx5-MuiTypography-root"
            >
              Landed My First Job
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
